<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="24dp"
    tools:context="com.jmarkstar.s3.ButterknifeActivity">

    <TextView android:id="@+id/tv_titulo"
        android:text="REGISTRO"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/et_nombre"
        android:hint="@string/hint_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText android:id="@+id/et_apellidos"
        android:hint="@string/hint_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText android:id="@+id/et_direccion"
        android:hint="@string/hint_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/tienes_hijos"
            android:textSize="18sp"
            android:layout_marginRight="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup android:id="@+id/rg_hijos"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton android:id="@+id/rb_si"
                android:text="Si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton android:id="@+id/rb_no"
                android:text="No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_cuantos_hijos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/cuantos_hijos"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup android:id="@+id/rg_cuantos_hijos"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton android:id="@+id/rb_1"
                android:text="@string/tienes_1_hijo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton android:id="@+id/rb_2_a_4"
                android:text="@string/tienes_entre_2_a_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton android:id="@+id/rb_5_mas"
                android:text="@string/tienes_entre_5_mas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>

    <CheckBox android:id="@+id/cb_terms"
        android:text="@string/terminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/m_btn_guardar"
        android:text="@string/btn_guardar"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/tv_view_1"
            android:text="View 1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/btn_view_2"
            android:text="View 2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView android:id="@+id/iv_view_3"
            android:src="@drawable/ic_rabbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
